# fias-elasticsearch

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
