[tool.poetry]
name = "fias-elasticsearch"
version = "0.1.0"
description = "FIAS-database using Elasticsearch as a searching backend"
authors = ["Stanislav Balahonov <stanislav.balahonov@simbirsoft.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
