[tool.poetry]
name = "fias-elasticsearch"
version = "0.1.0"
description = "FIAS-database using Elasticsearch as a searching backend"
authors = ["Stanislav Balahonov <stanislav.balahonov@simbirsoft.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
elasticsearch = {extras = ["async"], version = "^7.11.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
